--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 			</div><br>
 		    <div>
 				<button type="submit" id="submit" value="Submit">Submit</button>
-<!-- 				<button type="submit" id="submit" value="Submit">Submit</button> -->
+<!-- 				<button type="submit" id="submit" value="Submit"></button> -->
 			     <input type="submit" id="submit" value="Submit">
 			</div>
 	</form>
