--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 			</select>
 			</div><br>
 		    <div>
-				<button type="submit" id="submit" value="Submit" </button>
+				<button type="submit" id="submit" value="Submit"> </button>
 <!-- 				<button type="submit" id="submit" value="Submit">submit</button> -->
 			     <input type="submit" id="submit" value="Submit">
 			</div>
