--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
 			</select>
 			</div><br>
 		    <div>
-				<button type="submit" id="submit" value="Submit"> submit</button>
-<!-- 				<button type="submit" id="submit" value="Submit">submit</button> -->
+				<button type="submit" id="submit" value="Submit">submit</button>
+<!-- 				<button type="submit" id="submit" value="Submit"></button> -->
 			     <input type="submit" id="submit" value="Submit">
 			</div>
 	</form>
